--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
     <link
       rel="stylesheet"
       type="text/css"
